Added instructions & headers for Howard

--- a/randomWalk.css
+++ b/randomWalk.css
@@ -1,1 +1,5 @@
-
+/* TO DO: 
+[ ] Add a function called calculateWalk() that replaces most of the code at the end of the page
+[ ]Change the output from preformatted text to a table
+[ ]Style the table so all cells are essentially square
+*/
