Added git instructions

--- a/randomWalk.css
+++ b/randomWalk.css
@@ -2,4 +2,9 @@
 [ ] Add a function called calculateWalk() that replaces most of the code at the end of the page
 [ ]Change the output from preformatted text to a table
 [ ]Style the table so all cells are essentially square
+
+When you finish a task. Open up terminal and go to the directory where you saved this file. Then type:
+git add *
+git commit -m "message"
+git push
 */
