--- a/randomWalk.css
+++ b/randomWalk.css
@@ -1,12 +1,55 @@
 /* TO DO: 
-[ ] Do not share code
-[ ] Add a function called calculateWalk() that replaces most of the code at the end of the page
-[ ]Change the output from preformatted text to a table
 [ ]Style the table so all cells are essentially square
 
 When you finish a task. Open up terminal and go to the directory where you saved this file. Then type:
+rder: 1px solid;
+}
 WARNING: Before you do this, make sure your code works without issue and that you saved your files.
 git add *
 git commit -m "message"
 git push
+*/
+
+
+    button a {
+      text-decoration: none;
+      color: black;
+    }
+
+    button a:hover {
+      cursor: inherit;
+    }
+
+    pre {
+      font-family: monospace;
+    }
+
+    p {
+      font-size: 100%;
+    }
+
+    sub {
+      font-size: 50%;
+    }
+
+    #results {
+      /* border:2px blue solid;*/
+
+      margin-top: 30px;
+      padding: 20px;
+
+    }
+
+	table, th {
+	  border: 1px solid;
+	}
+
+
+/*
+    <?php
+
+    if (!$gridSize) {
+      echo "#results{display:none;}";
+    }
+	?>
 */
