Added a PHP styling file to replace regular .css file

--- a/randomWalk.css
+++ b/randomWalk.css
@@ -1,8 +1,6 @@
-/* TO DO: 
-WARNING: Before you do this, make sure your code works without issue and that you saved your files.
-git add *
-git commit -m "message"
-git push
+/*  
+    This file is discontinued.  It is no longer used by the random walk, but will remain here for reference.
+    Or just incase we want to use it again.
  */
 
 
